--- a/Client/Pages/DiverInfo/ViewDiver.razor
+++ b/Client/Pages/DiverInfo/ViewDiver.razor
@@ -33,7 +33,8 @@
     {
         <div class="row">
             @*Diver Info Form*@
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+            <div class="col-1 col-sm-1 col-md-1 col-lg-1"></div>
+            <div class="col-10 col-sm-10 col-md-10 col-lg-10">
                 <EditForm Model="@dvr" OnValidSubmit="@SaveDiver">
                     <DataAnnotationsValidator />
 
@@ -73,6 +74,7 @@
                             <ValidationMessage For="@(() => dvr.Email)" />
                         </div>
                     </div>
+                    <br />
                     <div class="row">
                         <div class="col-12">
                             <button type="submit" class="btn btn-success">
@@ -80,11 +82,14 @@
                             </button>
                         </div>
                     </div>
-
                 </EditForm>
             </div>
+        </div>
+        <div class="col-1 col-sm-1 col-md-1 col-lg-1"></div>
+        <br />
+        <div class="row">
             @*Certifacations*@
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+            <div class="col-11 col-sm-11 col-md-11 col-lg-11">
                 <div class="row">
                     <div class="col-12 table">
                         <div class="lh-table-container">
